Lay in placeholder files

--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -1,10 +1,16 @@
-# `Hexameter.jl`
+---
+engine: julia
+---
 
-> Metrical analysis of ancient Greek hexameters.
+# Hexameter.jl
+
+
+> *Metrical analysis of ancient Greek hexameters*.
 
 ## Shortest possible example
 
-```@example intro
+```{julia}
+#| warning: false
 using Hexameter
 stichos("ἡρώων, αὐτοὺς δὲ ἑλώρια τεῦχε κύνεσσιν")
 ```
